completion of thus project

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h2>Get Unicode Character Value</h2>
         <input type="text" id="inputType" maxlength="1" placeholder="Enter a Character">
-        <button onclick="detectChar">Detect</button>
-        <p id="result">This</p>
+        <button onclick="detectChar()">Detect</button>
+        <p id="result"></p>
     </div>
 
     <script src="./script.js"></script>
